[package]
name = "concurrent-pqueue"
version = { workspace = true }
edition = "2021"
rust-version = "1.70"
description = "A high-performance, thread-safe priority queue with dynamic priority updates"
license = "MIT"
authors = ["Dwayn Matthies <dwayn.matthies@gmail.com>"]
repository = "https://github.com/dwayn/pqueue"
keywords = ["priority-queue", "concurrent", "thread-safe", "data-structures"]
categories = ["data-structures", "concurrency"]
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { workspace = true }
