[package]
name = "pqueue_server"
version = { workspace = true }
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true }
concurrent-pqueue = { path = "../pqueue" }
tokio = { workspace = true }
uuid = { workspace = true }
